--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,9 +1,3 @@
-span.icon-logo {
-  font-size: 4rem;
-  margin-top: -0.5rem;
-  margin-left: -0.6rem;
-}
-
 body{
   position: relative;
   font-weight: 300;
